# mypython

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
.claude/commands/: commit.md
.github/workflows/: ci.yml  release.yml
docs/: INDEX.md
notebooks/: 001_claude_code_sdk.ipynb
scripts/: bump_version.py  check_markdown.py  claude-markdown-check.sh
src/mypython/: __init__.py  __main__.py
tests/: test_main.py
